[project]
name = "census-bds"
version = "0.1.0"
description = "Census Bureau Business Dynamics Statistics analysis for Medical Technology Manufacturers (NAICS 3391)"
dependencies = [
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "matplotlib>=3.9.0",
    "tabulate>=0.9.0",
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pyright>=1.1.380",
    "black>=24.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
analyze = { cmd = "python analyze.py" }
